# EAN-numbers-vision

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  api-reference.md  architecture.md  cli-tools.md  data-models.md  deployment.md  pipeline-workflow.md  setup.md
infra/: README.md
infra/bicep/: main.bicep
infra/scripts/: deploy.sh  import_catalog.sh
src/: __init__.py
src/barcode/: __init__.py  decoder.py  validator.py
src/config/: __init__.py  logging.py  settings.py
src/db/: __init__.py  client.py  init_indexes.py
src/db/repositories/: __init__.py  detections.py  images.py  jobs.py  products.py
src/llm/: __init__.py  gemini.py
src/models/: __init__.py  base.py  detection.py  image.py  job.py  product.py
src/storage/: __init__.py  blob.py  paths.py
tests/: __init__.py  conftest.py  test_barcode_validator.py  test_models.py  test_storage_paths.py
tools/: __init__.py
tools/find_detection/: __init__.py  main.py
tools/manual_review_ui/: __init__.py  app.py
tools/reports/: __init__.py  main.py
tools/uploader/: __init__.py  main.py
workers/: __init__.py
workers/decode_failed/: __init__.py  main.py
workers/decode_fallback/: __init__.py  main.py
workers/decode_primary/: __init__.py  main.py
workers/dispatcher/: __init__.py  main.py
workers/preprocess/: __init__.py  main.py
