[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ean-extraction"
version = "0.1.0"
description = "EAN Barcode Extraction System with Azure + MongoDB + Gemini AI"
authors = ["EAN Team"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "workers" },
    { include = "tools" }
]

[tool.poetry.dependencies]
python = "^3.11"

# Azure
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"

# MongoDB
pymongo = "^4.6.0"
motor = "^3.3.0"

# Image Processing
opencv-python = "^4.9.0"
Pillow = "^10.2.0"
pyzbar = "^0.1.9"

# API & Web
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.28.0"
python-multipart = "^0.0.6"

# Data Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Utilities
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
tenacity = "^8.2.0"
click = "^8.1.0"

# Google Gemini (new SDK)
google-genai = "^1.52.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
upload = "tools.uploader.main:main"
dispatcher = "workers.dispatcher.main:main"
report = "tools.reports.main:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src", "workers", "tools"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov=workers --cov-report=term-missing"
